@@ -44,6 +44,8 @@ This is the initial release.
 ** Configuration `durationfilter.header-name` supported.
 ** Configuration `durationfilter.active` supported.
 ** Configuration `durationfilter.max-length` supported.
+** Inner request trace supported.
+** HTTP status added to trace information set.
 
 === Bug fixes
 
